trying gemini again

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -258,7 +258,7 @@ inspired by <em><a href="https://homestuck.com/">Homestuck</a></em>'s fictional 
 <textarea id="code" spellcheck="false" placeholder="Write !~ATH code here..."></textarea>
 
 <div class="input-section">
-<div class="input-label">INPUT (stdin for HEED), newline separates inputs:</div>
+<div class="input-label">INPUT for HEED(), newline separates inputs:</div>
 <textarea id="input" spellcheck="false" rows="1" placeholder="One line per HEED() call..."></textarea>
 </div>
 
