--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,3 +1,21 @@
+<!--
+  !~ATH Web Interpreter
+  Copyright (C) 2026 Robin
+
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or
+  (at your option) any later version.
+
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License along
+  with this program; if not, write to the Free Software Foundation, Inc.,
+  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -856,6 +874,10 @@ function shareCode() {
   }
 })();
 </script>
+
+<div class="card" style="font-size: 10px; text-align: center; color: #666; margin-top: 20px;">
+  &copy; 2026 Robin. Licensed under the <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt" style="color: #666;">GNU GPL v2</a>.
+</div>
 
 </body>
 </html>
