--- a/webpage/index.html
+++ b/webpage/index.html
@@ -349,10 +349,13 @@ inspired by <em><a href="https://homestuck.com/">Homestuck</a></em>'s fictional 
 
 <p>
 <strong>!~ATH</strong> (pronounced "until death") is an esoteric programming language where
-all control flow is predicated on waiting for things to <strong>die</strong>. Inspired by
-the fictional ~ATH language from <em>Homestuck</em>. Everything is about death. Loops wait
+all control flow is predicated on waiting for things to die. Everything is about death. Loops wait
 for entities to die. Computation happens in death callbacks. The language is
 deliberately inconvenient.
+</p>
+<p>
+Inspired by
+the fictional ~ATH language from <em>Homestuck</em>.
 </p>
 
 <h3>ENTITIES</h3>
