update webpage links to github

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -288,6 +288,9 @@ an esoteric language where everything is about death
 <div class="subtitle">
 inspired by <em><a href="https://homestuck.com/">Homestuck</a></em>'s fictional ~ATH
 </div>
+<div class="subtitle">
+<a href="https://github.com/robinpie/ath">view the GitHub and download the Python interpreter</a>
+</div>
 </div>
 
 <div class="card">
@@ -341,7 +344,7 @@ inspired by <em><a href="https://homestuck.com/">Homestuck</a></em>'s fictional 
 </div>
 
 <div class="card download">
-<strong>DOWNLOAD:</strong> Run !~ATH programs locally with the <a href="https://drive.google.com/file/d/1C-_2jQ3b49d555nrb36DRXqXHEWJ5hm-/view?usp=sharing">Python interpreter</a> (includes process, connection, watcher entities and file I/O)
+<strong>DOWNLOAD:</strong> Run !~ATH programs locally with the Python interpreter (found on <a href="https://github.com/robinpie/ath">GitHub</a>). It includes process, connection, watcher entities and file I/O.
 </div>
 
 <div class="card info">
