remove custom link coloring

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -61,10 +61,6 @@ h1 {
   margin-bottom: 10px;
 }
 
-.subtitle a {
-  color: #000;
-}
-
 .editor-label {
   font-weight: bold;
   margin-bottom: 5px;
@@ -210,10 +206,6 @@ button:disabled {
   font-size: 12px;
 }
 
-.download a {
-  color: #000;
-}
-
 .example-buttons {
   display: flex;
   flex-wrap: wrap;
@@ -240,10 +232,6 @@ button:disabled {
 .info h2 .spec-link {
   font-size: 11px;
   font-weight: normal;
-}
-
-.info h2 .spec-link a {
-  color: #000;
 }
 
 .info h3 {
@@ -511,7 +499,7 @@ TIME()                    // Unix timestamp in ms</pre>
 </div>
 
 <div class="card" style="font-size: 10px; text-align: center; color: #666; margin-top: 15px;">
-  &copy; 2026 Robin. Licensed under the <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt" style="color: #666;">GNU GPL v2</a>.
+  &copy; 2026 Robin. Licensed under the <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.txt">GNU GPL v2</a>.
 </div>
 
 </div>
