--- a/webpage/index.html
+++ b/webpage/index.html
@@ -361,7 +361,7 @@ import timer T2(500ms);    // dies after 500 milliseconds</pre>
 <span class="unavailable">import process P("cmd");   // dies when process exits [NOT IN BROWSER]</span><br>
 <span class="unavailable">import connection C("host", 80); // dies when connection closes [NOT IN BROWSER]</span><br>
 <span class="unavailable">import watcher W("file.txt");    // dies when file is deleted [NOT IN BROWSER]</span><br>
-<span class="unavailable">import watcher Lib("lib.~ath");  // loads .~ath as module [NOT IN BROWSER]</span>
+<span class="unavailable">import watcher Lib("lib.~ATH");  // loads .~ATH as module [NOT IN BROWSER]</span>
 </p>
 <p>
 <code>THIS</code> is an implicit entity representing the program itself.
